poprawa controllera